4/best-practices-analyzer/advanced-cluster-manager/installing-kyverno-via-acm-policy/kyverno-livenessprobe-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-liveness-probes
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: validate-livenessProbe
    match:
      resources:
        kinds:
        - Pod
        namespaces: ["default"]
    validate:
      message: "Liveness probes are required."
      pattern:
        spec:
          containers:
          - livenessProbe: "*"
